--- a/test.html
+++ b/test.html
@@ -16,6 +16,6 @@
         console.error("缺少 img 參數，例如 ?img=05_LH_p000181.jpg");
     } else {
         // 指定給 a-assets 裡的 img
-        document.querySelector("#pano").setAttribute("src", img);
+        document.querySelector("#sky").setAttribute("src", img);
     }
 </script>
